# transformer_fundamentals

./: .gitignore  README.md  pyproject.toml
assets/: README.md
configs/: test_custom.yaml  test_torch.yaml  torch_25m.yaml  torch_50m.yaml  torch_tinystories.yaml
models/: __init__.py  base.py  config.py  custom_transformer.py  torch_transformer.py  wrapper.py
scripts/: train.py  validate.py  verify_install.py
scripts/archive/: train_custom.py  train_torch.py
tools/: __init__.py  dataset_registry.py  download_dataset.py  pretokenize.py  token_analyzer.py  tokenization.py  train_tokenizer.py
training/: __init__.py  checkpoint_manager.py  evaluator.py  logger.py
visualizer/: __init__.py  __main__.py  app.py  compare.py  compute.py  data.py  plots.py
