[project]
name = "transformer_fundamentals"
version = "0.1.0"
description = "Educational low-level transformer implementations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Karl Taht"}
]

dependencies = [
    # Core ML
    "torch>=2.0.0",
    "numpy>=1.24.0",

    # HuggingFace ecosystem
    "transformers>=4.35.0",
    "tokenizers>=0.15.0",
    "datasets>=2.15.0",
    "huggingface-hub>=0.19.0",

    # Data processing
    "pyarrow>=14.0.0",

    # Configuration
    "pyyaml>=6.0",

    # Progress and logging
    "tqdm>=4.66.0",
    "rich>=13.0.0",

    # Visualization
    "gradio>=4.0.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "training*", "tools*", "scripts*", "visualizer*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
